# swayfade

./: .gitignore  pyproject.toml
packaging/fedora/: swayfade.spec
swayfade/: __init__.py  swayfade.py
tests/: test_sway_fade.py
